OpenID fixes